--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,16 +1,16 @@
-<!--
-File   _includes/navbar.html
-REV02: Tue 03 Aug 2021 09:41:00 WIB
-REV01: Sun 04 Jul 2021 09:57:16 WIB
-START: Wed 17 Feb 2021 19:48:31 WIB
-This is a free HTML file
--->
-
-<nav class='navbar'>
+<!-- File _includes/navbar.html           -->
+<!-- (c) 2021 - 2021 VauLSMorg            -->
+<!-- REV02: Mon 05 Jul 2021 17:21:26 WIB  -->
+<!-- REV01: Tue 15 Jun 2021 11:11:53 WIB  -->
+<!-- START: Wed 17 Feb 2021 19:48:31 WIB  -->
+<!-- This is a free HTML file             -->
+<nav class="navbar">
   <ul>
-    {% for ii in site.navbarlinks %}    
-      <li><a href="{{ ii.link | relative_url }}">{{ ii.navbar }}</a>
-    {% endfor %}
+    <li class='listitem'><a href='{{ site.baseurl }}/'>HOME</a></li>
+    <li class='listitem'><a href='{{ site.baseurl }}/links'>LINKS</a></li>
+    <li class='listitem'><a href='{{ site.baseurl }}/tips'>TIPS</a></li>
+    <li class='listitem'><a href='https://os.vlsm.org/Log/hakimamarullah.tar.bz2.txt'>KEY</a></li>
+    <li class='listitem'><a href='{{ site.baseurl }}/TXT/mylog.txt'>LOG</a></li>
+    <li class='listitem'><a href='{{ site.urlgithub }}'>GITHUB</a></li>
   </ul>
 </nav>
-
