--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <!-- File _layouts/layout.html           -->
 <!-- (c) 2021 - 2021 VauLSMorg           -->
-<!-- REV00: Sun 04 Jul 2021 10:48:43 WIB -->
 <!-- START: Wed 17 Feb 2021 19:44:53 WIB -->
 <!-- This is a free HTML file            -->
 {% include head.html %}
@@ -12,18 +11,10 @@
   <header>
   <div class="row">
     <div class="column left">
-      <img src="{{ site.baseurl }}/assets/images/default.jpg" alt="Default" style="width:130px; border-radius:50%">
+      <img src="{{ site.baseurl }}/assets/images/default.png" alt="Arch is the best distro" style="width:130px; border-radius:70%">
     </div>
-    <div class="column right1">
-      {% if page.title %}{{ page.title | escape }}
-      {% else %}{{ site.title | escape }}{% endif %}
-    </div>
-    <div class="column right2">
-      {% if page.author %}{{ page.author | escape }}
-      {% else %}{{ site.author | escape }}{% endif %}
-      ---
-      {% if page.address %}{{ page.address | escape }}
-      {% else %}{{ site.address | escape }}{% endif %}
+    <div class="column right">
+        <p>Operating System Page (os212)</p>
     </div>
   </div>
   </header>
@@ -32,10 +23,6 @@
      {{ content }}
   </section>
   {% include footer.html %}
-  {% include google-analytics.html %}
-  {% include scripts.html %}
 </div>
 </body>
 </html>
-
-
