dress up github page using template v1.5.0

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -5,13 +5,13 @@
 <!-- START: Wed 17 Feb 2021 19:44:53 WIB -->
 <!-- This is a free HTML file            -->
 {% include head.html %}
-<body class="plainclass1">
+<body class="plainclass">
 <!-- body class="backclass" -->
 <div class="container">
   <header>
   <div class="row">
     <div class="column left">
-      <img src="{{ site.baseurl }}/assets/images/default.png" alt="Arch is the best distro" style="width:130px; border-radius:70%">
+      <img src="{{ site.baseurl }}/assets/images/default.jpg" alt="Arch is the best distro" style="width:130px; border-radius:70%">
     </div>
     <div class="column right">
         <p>Operating System Page (os212)</p>
