--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,36 +5,32 @@
  */
 
 .backclass {
-  background-image:url(/assets/images/default.png)
+  background-image:url(/assets/images/default.jpg)
 }
 
-.plainclass {
-  color:            white;
-  background-color: #101030;
-}
 
 /* See https://www.w3schools.com/colors/colors_hsl.asp              */
 /* See https://www.quackit.com/css/color/charts/hsl_color_chart.cfm */
-.plainclass1 {
+.plainclass{
   color:            hsl(0, 100%, 100%);
   background-color: hsl(0, 10%, 10%);
   line-height:      120%;
   font-family:      monospace,courier;
 }
 
-.plainclass1 li {
+.plainclass li {
   line-height:      140%;
 }
 
-.plainclass1 h1 {
+.plainclass h1 {
   color:            hsl(100, 50%, 50%);
 }
 
-.plainclass1 h2 {
+.plainclass h2 {
   color:            hsl(100, 50%, 50%);
 }
 
-.plainclass1 h3 {
+.plainclass h3 {
   color:            hsl(100, 50%, 50%);
 }
 
@@ -73,54 +69,14 @@
   width:            130px;
 }
 
-.right1 {
-  height:           66px;
+.right {
+  height:           105px;
   width:            calc(100% - 200px);
-  padding-top:      24px;
-  padding-bottom:   0px;
-  padding-left:     30px;
-  font-size:        1.9em;
-  font-weight:      bold;
-}
-
-.right2 {
-  height:           50px;
-  width:            calc(100% - 200px);
-  padding-top:      5px;
+  padding-top:      40px;
   padding-bottom:   5px;
   padding-left:     30px;
-  font-size:        1.3em;
+  font-size:        1.4em;
   font-weight:      bold;
-}
-}
-
-.youtube {
-  float:            left;
-  display:          inline-block;
-  height:           150px;
-  width:            100%;
-  padding-top:      10px;
-  padding-bottom:   10px;
-  padding-left:     10px;
-  padding-right:    10px;
-}
-
-.yvideo {
-  width:            25%;
-  height:           100%;
-  padding-top:      0px;
-  padding-bottom:   0px;
-  padding-left:     0px;
-  padding-right:    0px;
-}
-
-.yinfo {
-  width:            calc(75%  - 30px);
-  height:           calc(100% - 20px);
-  padding-top:      10px;
-  padding-bottom:   10px;
-  padding-left:     10px;
-  padding-right:    10px;
 }
 
 .row:after {
@@ -179,23 +135,6 @@ td {
   padding: 5px 10px;
 }
 
-/*
-  ZCZC
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  padding: 10px; 
-  color: #b5e853;
-  background: rgba(0, 0, 0, 0.9);
-  border-radius: 2px;
-  word-wrap: normal;
-  overflow: auto;
-  overflow-y: hidden;
-  max-width: 65%;
-
- */
-
-/*
- ************************************************************
- */
 
 @media screen and (max-width:768px) {
   ul {
