--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
   <ul>
     <li class='listitem'><a href='{{ site.baseurl }}/'>HOME</a></li>
     <li class='listitem'><a href='{{ site.baseurl }}/LINKS'>LINKS</a></li>
-    <li class='listitem'><a href='{{ site.baseurl }}/tips'>TIPS</a></li>
+    <li class='listitem'><a href='{{ site.baseurl }}/tips/'>TIPS</a></li>
     <li class='listitem'><a href='https://os.vlsm.org/Log/hakimamarullah.tar.bz2.txt'>KEY</a></li>
     <li class='listitem'><a href='{{ site.baseurl }}/TXT/mylog.txt'>LOG</a></li>
     <li class='listitem'><a href='{{ site.urlgithub }}'>GITHUB</a></li>
