--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,18 @@
  "Mike Dane", "w3schools", et al.
  */
 
-.backclass {
-  background-image:url(/assets/images/default.jpg)
+body {
+    margin: 0;
+    font-family: var(--bs-body-font-family);
+    font-size: var(--bs-body-font-size);
+    font-weight: var(--bs-body-font-weight);
+    line-height: var(--bs-body-line-height);
+    color: var(--bs-body-color);
+    text-align: var(--bs-body-text-align);
+    background-color: var(--bs-body-bg);
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: transparent;
 }
-
 
 /* See https://www.w3schools.com/colors/colors_hsl.asp              */
 /* See https://www.quackit.com/css/color/charts/hsl_color_chart.cfm */
@@ -89,7 +97,7 @@
   font-size:        0.8em;
   border-width:     0px;
   margin:           0px;
-  background-color: hsla(0,     0%,    0%, 1);
+  background-color: #6f42c1;
 }
 
 .navbar ul li {
