--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 {% include head.html %}
 
-<body class="plainclass">
+<body>
     <div class="container">
         <header>
             <div class="row">
