--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- File _layouts/layout.html           -->
+<!-- (c) 2021 - 2021 VauLSMorg           -->
+<!-- START: Wed 17 Feb 2021 19:44:53 WIB -->
+<!-- This is a free HTML file            -->
 {% include head.html %}
 
-<body>
+<body class="plainclass1">
+    <!-- body class="backclass" -->
     <div class="container">
         <header>
             <div class="row">
@@ -23,3 +28,4 @@
 </body>
 
 </html>
+© 2021 GitHub, Inc.
