--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@
 }
 
 .container a:hover {
-    color: #f0f0f0;
+    color: blue;
 }
 
 .row {}
@@ -77,7 +77,7 @@
 }
 
 .navbar ul li a:hover {
-    background: #ef2929;
+    background: blue;
     color: #d7d7d7;
     font-size: 1em;
     font-weight: bold;
