--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -20,7 +20,7 @@
             </div>
         </header>
         {% include navbar.html %}
-        <section>
+        <section markdown="1">
             {{ content }}
         </section>
         {% include footer.html %}
