--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -6,7 +6,7 @@
 <!-- This is a free HTML file            -->
 {% include head.html %}
 
-<body class="plainclass1">
+<body class="plainclass1" markdown="1">
     <!-- body class="backclass" -->
     <div class="container">
         <header>
