hakimamarullah: update pubkey

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,6 +11,7 @@
     <li class='listitem'><a href='{{ site.baseurl }}/TIPS/'>TIPS</a></li>
     <li class='listitem'><a href='https://os.vlsm.org/Log/hakimamarullah.tar.bz2.txt'>KEY</a></li>
     <li class='listitem'><a href='{{ site.baseurl }}/TXT/mylog.txt'>LOG</a></li>
+    <li class='listitem'><a href='{{ site.baseurl}}/TXT/mypubkey.txt'>PUBLIC KEY</a></li>
     <li class='listitem'><a href='{{ site.urlgithub }}'>GITHUB</a></li>
   </ul>
 </nav>
